@@ -1,0 +1,44 @@
+# Makefile for skeleton
+#
+# Copyright (C) 2004 Richard Kojedzinszky <krichy@tvnetwork.hu>
+# All rights reserved.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+PKG := grsec
+SRC_FILENAME = grsecurity-2.0.2-2.4.28.tar.bz2
+EXTRACTED_DIR = grsecurity-2.0.2-2.4.28
+DOWNLOAD_SITES = $(CFLINUX_PACKAGES)
+
+# include the common package targets 
+include $(TOP_DIR)/packages.mk 
+
+configure: patch $(CONFIGURED_STAMP)
+
+$(CONFIGURED_STAMP):
+	touch $(CONFIGURED_STAMP)
+
+clean:
+	rm -f $(BUILT_STAMP)
+	rm -f $(CONFIGURED_STAMP)
+
+build: configure $(BUILT_STAMP)
+
+$(BUILT_STAMP):
+	touch $(BUILT_STAMP)
+
+install: build
+
+.PHONY: configure clean build install
