@@ -1,3 +1,8 @@
+Changes from 0.1.5-pre1 to 0.1.5-pre2:
+	- Version rename
+	- Added some extensions from grsecurity.
+	  http://www.grsecurity.net/
+
 Changes from 0.1.4 to 0.1.5-pre1:
 	- added the vtun package
 	- added the ltraf package
